Fix button size on mobile

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -23,7 +23,7 @@ h25 {font-size:400%;}
   h0 {font-size:100px;}
   h15 {font-size:50px;}
   h25 {font-size:30px;}
-  .btn-xl {font-size:75px;}
+  .btn-xl {font-size:54px;}
 }
 @media screen and (max-device-width : 320px)
 {
